crates/knok/tests/ui/graph_call_type.stderr
error: graph `layer` argument 0 type mismatch: expected TensorType { elem: F32, shape: [4] }, got TensorType { elem: F32, shape: [5] }
 --> tests/ui/graph_call_type.rs:8:1
  |
8 | #[knok::graph(backend = "llvm-cpu")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `knok::graph` (in Nightly builds, run with -Z macro-backtrace for more info)
